[metadata]
# replace with your username:
name = haokan-download-icexmoon
version = 0.0.1
author = icexmoon
author_email = icexmoon@qq.com
description = auto download one authors video on haokan website
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/icexmoon/haokan-download
project_urls =
    Bug Tracker = https://github.com/icexmoon/haokan-download/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    requests
    beautifulsoup4
    html5lib
    you-get
    jsonlines

[options.package_data]
* = *.info

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyhkdownload = haokan_download.__main__:main